...
            "value": "Kommt gerade an"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Coming down now"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Llegando ahora"
...
            "value": "Alle Downloads"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "All downloads"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Todas las descargas"
...
